Add waves to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>BattleShip: Let's sunk some boats</title>
   </head>
   <body class="h-full">
+    <div class="wave -z-10"></div>
+    <div class="wave -z-10"></div>
+    <div class="wave -z-10"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
